<resources>
    <string name="app_name">Go tracker</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="track">Трек</string>
    <string name="list">Список</string>
    <string name="statistic">Статистика</string>
    <string name="start">start</string>
    <string name="speed">Speed:</string>
    <string name="dst">DST:</string>
    <string name="stop_btn">stop</string>
    <string name="stop">stop</string>
    <string name="pause">pause</string>
    <string name="cd_register_image_view">register_image_view</string>
    <string name="register_text_we_sent">Мы отправили SMS с кодом проверки на ваш телефон:</string>
    <string name="register_hint_default">- - - - - -</string>
    <string name="exit">Выход</string>
    <string name="maxSpeed">maxSpd</string>
    <string name="duration">Продолжительность:</string>
    <string name="dialog_maxSpd">Максимальная скорость</string>
    <string name="save">Сохранить</string>
    <string name="ok">Ok</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="user_name">Имя пользователя</string>
    <string name="phone_number">Номер телефона</string>
    <string name="exitButton">exitButton</string>
    <string name="settings_name_key">settings_name_key</string>
    <string name="settings_phone_number">settings_phone_number</string>
    <string name="time">TIME:</string>
    <string name="resume">resume</string>
    <string name="average_speed">Средняя скорость</string>
    <string name="max_speed">Максимальная скорость:</string>
    <string name="distance">Дистанция:</string>
    <string name="track_cannot_be_saved">Трек не может быть сохранен. Потому-что он слишком короткий</string>
    <string name="cancel">cancel</string>
    <string name="find">finde</string>

</resources>
