<?xml version="1.0" encoding="utf-8"?>


<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <PreferenceCategory app:title="Профиль">

        <EditTextPreference
            android:icon="@drawable/ic_baseline_account_circle_24"
            android:key="@string/settings_name_key"
            android:summary="@string/user_name"
            android:title="@string/user_name" />

        <EditTextPreference
            android:icon="@drawable/ic_baseline_phone_24"
            android:key="@string/settings_phone_number"
            android:summary="@string/phone_number"
            android:title="@string/phone_number" />

    </PreferenceCategory>
    <PreferenceCategory>
        <Preference
            android:key="@string/exitButton"
            android:title="@string/exit" />
    </PreferenceCategory>


</PreferenceScreen>