<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/notyfyBackground"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="16dp"
        android:paddingEnd="16dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/speed_notify_label"
                    style="@style/notify_lable"
                    android:text="@string/speed" />

                <TextView
                    android:id="@+id/speed_params"
                    style="@style/notify_params"
                    android:text="0" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/distance_notify_labile"
                    style="@style/notify_lable"
                    android:text="@string/dst" />

                <TextView
                    android:id="@+id/card_distance_params"
                    style="@style/notify_params"
                    android:text="0" />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

    <ImageButton
        android:clickable="true"
        android:focusable="true"
        android:background="@drawable/notify_btn_background"
        android:layout_margin="6dp"
        android:padding="6dp"
        android:id="@+id/start_btn"
        android:src="@drawable/ic_stop_black_24dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/stop_btn" />


</LinearLayout>