<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.EnterCodeFragment">


    <ImageView
        android:layout_marginVertical="@dimen/vertical_margin"
        android:id="@+id/register_image_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/cd_register_image_view"
        android:src="@drawable/register_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/register_text_code_enter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/vertical_margin"
        android:gravity="center"
        android:text="Введите код"
        android:textColor="@color/black"
        android:textSize="@dimen/normalTextSize"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/register_image_view"
        tools:layout_editor_absoluteX="16dp" />

    <TextView
        android:id="@+id/we_sent"
        style="@style/small_text"
        android:text="@string/register_text_we_sent"
        app:layout_constraintBottom_toTopOf="@+id/phone_number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_text_code_enter" />

    <TextView
        android:id="@+id/phone_number"
        style="@style/small_text"
        android:layout_marginVertical="0dp"

        app:layout_constraintBottom_toTopOf="@+id/enter_input_code"
        android:layout_marginHorizontal="@dimen/horizontal_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/we_sent" />

    <EditText
        android:id="@+id/enter_input_code"
        style="@style/editText"
        android:autofillHints=""
        android:gravity="center"
        android:hint="@string/register_hint_default"
        android:maxLength="6"
        android:layout_marginHorizontal="@dimen/horizontal_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phone_number" />

</androidx.constraintlayout.widget.ConstraintLayout>